removing brackets from md file

--- a/src/summary_testing.ipynb
+++ b/src/summary_testing.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "from functions import summarize\n",
-    "import markdown"
+    "import markdown\n",
+    "from transformers import pipeline, AutoTokenizer"
    ]
   },
   {
@@ -211,7 +212,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def md_to_plaintext(md):\n",
+    "    html = markdown.markdown(md)\n",
+    "    html = re.sub(r'<pre>(.*?)</pre>', ' ', html)\n",
+    "    html = re.sub(r'<code>(.*?)</code >', ' ', html)\n",
+    "\n",
+    "    # extract text\n",
+    "    soup = BeautifulSoup(html, \"html.parser\")\n",
+    "    text = ''.join(soup.findAll(text=True))\n",
+    "    cleaned = \"\"\n",
+    "    for char in text:\n",
+    "        if char != \"[\" and char != \"]\":\n",
+    "            cleaned += char\n",
+    "    return cleaned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To-Do\n",
+      "\n",
+      "x Start Dev for Neurovolume in Docker file\n",
+      "  If this takes a while to build, work on Introduction to Statistics\n",
+      "  Main goal: fMRI sequence from Open Neuro project which shows un-blurred brain anatomy\n",
+      "This dataset is pretty good looking: https://openneuro.org/datasets/ds003548/versions/1.0.1\n",
+      "  Use VDB color and emission to show activations, not a layered VDB\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "  Ask in Zulip about running/funding OSS stuff\n",
+      "What is the typical plan for running an open source project? I know from @filippo's blogpost that it is possible to build out a career, but he's pretty experienced and had a lot more projects under his belt. Is it the sort of thing that just helps getting jobs?\n",
+      "\n",
+      "\n",
+      "\n",
+      "Status as of Lunch\n",
+      "\n",
+      "Dockerfile does work but needed setup within vscode. I wonder what the best way to maintain all of this with the two githubs linked? Perhaps a question for Zach Lipp\n",
+      "Forgot to add nilearn to neurovolume deps,\n",
+      "\n",
+      "To-Do Afternoon\n",
+      "\n",
+      "x Add nilearn to docker file\n",
+      "x Push these changes to openvdb_docker\n",
+      "  Continue building fMRI sequence in open neuro with this vdb integrated\n",
+      "  86 the blender scripts and binaries, integrate this into your code base\n",
+      "\n",
+      "\n",
+      "  Follow up with Zach if/when the numpy support build works\n",
+      "\n",
+      "TRAOT\n",
+      "throwing rocks at oncoming traffic\n",
+      "Notes\n",
+      "\n",
+      "\n",
+      "Docker cp docker cp ./some_file CONTAINER:/work\n",
+      "\n",
+      "https://docs.docker.com/reference/cli/docker/container/cp/\n",
+      "\n",
+      "\n",
+      "\n",
+      "nib.load() indeed does not like .nii.gz files, despite the documentation\n",
+      "\n",
+      "Perhaps you didn't download correctly. Trying again with openneuro download --snapshot 1.0.1 ds003548 ds003548-download/\n",
+      "\n",
+      "This is indeed the case, the new download command above worked perfectly!\n",
+      "\n",
+      "\n",
+      "Rebuilding container with numpy support, this kind of thing is a big-ish question for dev-ops re: Zach Zulip messages.\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/m4/rtcmkx_17lv03n9tvdf76ycr0000gn/T/ipykernel_95808/1417636732.py:8: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
+      "  text = ''.join(soup.findAll(text=True))\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(note_path, 'r') as NOTE:\n",
+    "    text = md_to_plaintext(NOTE.read())\n",
+    "    print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -219,89 +319,34 @@
      "output_type": "stream",
      "text": [
       "Hardware accelerator e.g. GPU is available in the environment, but no `device` argument is passed to the `Pipeline` object. Model will be on CPU.\n",
-      "/var/folders/m4/rtcmkx_17lv03n9tvdf76ycr0000gn/T/ipykernel_95808/1362939293.py:15: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
-      "  text = ''.join(soup.findAll(text=True))\n",
-      "Token indices sequence length is longer than the specified maximum sequence length for this model (1025 > 512). Running this sequence through the model will result in indexing errors\n"
+      "/var/folders/m4/rtcmkx_17lv03n9tvdf76ycr0000gn/T/ipykernel_95808/1417636732.py:8: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
+      "  text = ''.join(soup.findAll(text=True))\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<h1>To-Do</h1>\n",
-      "<ul>\n",
-      "<li>[x] Start Dev for [[Neurovolume]] in [[Docker]] file<ul>\n",
-      "<li>[ ] If this takes a while to build, work on [[Introduction to Statistics]]</li>\n",
-      "<li>[ ] Main goal: [[fMRI]] sequence from Open Neuro project which shows un-blurred brain anatomy</li>\n",
-      "<li>This dataset is pretty good looking: https://openneuro.org/datasets/ds003548/versions/1.0.1<ul>\n",
-      "<li>[ ] Use [[VDB]] color and emission to show activations, not a layered VDB</li>\n",
-      "</ul>\n",
-      "</li>\n",
-      "</ul>\n",
-      "</li>\n",
-      "<li>[ ] Ask in Zulip about running/funding OSS stuff<ul>\n",
-      "<li>What is the typical plan for running an open source project? I know from @filippo's <a href=\"https://words.filippo.io/full-time-maintainer/\">blogpost</a> that it is possible to build out a career, but he's pretty experienced and had a lot more projects under his belt. Is it the sort of thing that just helps getting jobs?</li>\n",
-      "</ul>\n",
-      "</li>\n",
-      "</ul>\n",
-      "<h1>Status as of Lunch</h1>\n",
-      "<ul>\n",
-      "<li>Dockerfile does work but needed setup within vscode. I wonder what the best way to maintain all of this with the two githubs linked? Perhaps a question for Zach Lipp</li>\n",
-      "<li>Forgot to add <code>nilearn</code> to neurovolume deps,</li>\n",
-      "</ul>\n",
-      "<h1>To-Do Afternoon</h1>\n",
-      "<ul>\n",
-      "<li>[x] Add nilearn to docker file</li>\n",
-      "<li>[x] Push these changes to openvdb_docker</li>\n",
-      "<li>[ ] Continue building fMRI sequence in open neuro with this vdb integrated<ul>\n",
-      "<li>[ ] 86 the blender scripts and binaries, integrate this into your code base</li>\n",
-      "</ul>\n",
-      "</li>\n",
-      "<li>[ ] Follow up with Zach if/when the numpy support build works</li>\n",
-      "</ul>\n",
-      "<p>TRAOT\n",
-      "throwing rocks at oncoming traffic</p>\n",
-      "<h1>Notes</h1>\n",
-      "<ul>\n",
-      "<li>\n",
-      "<p>[[Docker]] cp <code>docker cp ./some_file CONTAINER:/work</code></p>\n",
-      "<ul>\n",
-      "<li>https://docs.docker.com/reference/cli/docker/container/cp/</li>\n",
-      "</ul>\n",
-      "</li>\n",
-      "<li>\n",
-      "<p><code>nib.load()</code> indeed does not like <code>.nii.gz</code> files, despite the <a href=\"https://nipy.org/nibabel/gettingstarted.html\">documentation</a></p>\n",
-      "</li>\n",
-      "<li>Perhaps you didn't download correctly. Trying again with <code>openneuro download --snapshot 1.0.1 ds003548 ds003548-download/</code></li>\n",
-      "<li>\n",
-      "<p><strong>This is indeed the case, the new download command above worked perfectly!</strong></p>\n",
-      "</li>\n",
-      "<li>\n",
-      "<p>Rebuilding container with numpy support, this kind of thing is a big-ish question for dev-ops re: Zach Zulip messages.</p>\n",
-      "</li>\n",
-      "</ul>\n",
-      "[{'summary_text': 'li>[x] Start Dev for [[Neurovolume]] in [[Docker]] fileul> Li>p>Rebuilding container with numpy support, this kind of thing is a big-ish question for dev-ops re: Zach Zulip messages ./strong>/p>, /ul>, and status as of Lunch/h1> .'}]\n"
+      "[{'summary_text': 'To-Do x Start Dev for Neurovolume in Docker file This dataset is pretty good looking: https://openneuro.org/datasets/ds003548/versions/1.0.1 Use VDB color and emission to show activations, not a layered VDB Ask in Zulip about running/funding OSS stuff . Status as of Lunch Dockerfile does work but needed setup within vscode .'}]\n"
      ]
     }
    ],
    "source": [
-    "summarizer = pipeline(\"summarization\", model=\"Falconsai/text_summarization\")\n",
-    "\n",
-    "import re\n",
-    "from bs4 import BeautifulSoup\n",
+    "model_name = \"Falconsai/text_summarization\"\n",
+    "summarizer = pipeline(\"summarization\", model=model_name)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "\n",
     "with open(note_path, 'r') as NOTE:\n",
-    "    html = markdown.markdown(NOTE.read())\n",
+    "    text = md_to_plaintext(NOTE.read())\n",
+    "    tokens = tokenizer(text)\n",
+    "    num_tokens = len(tokens['input_ids'])\n",
     "\n",
-    "    html = re.sub(r'<pre>(.*?)</pre>', ' ', html)\n",
-    "    html = re.sub(r'<code>(.*?)</code >', ' ', html)\n",
+    "    max_tokens = 512\n",
     "\n",
-    "    # extract text\n",
-    "    soup = BeautifulSoup(html, \"html.parser\")\n",
-    "    text = ''.join(soup.findAll(text=True))\n",
-    "    print(text)\n",
-    "    \n",
-    "    print(summarizer(text, max_length=1000, min_length=30, do_sample=False))"
+    "    if num_tokens >= max_tokens:\n",
+    "        num_tokens = max_tokens\n",
+    "\n",
+    "    print(summarizer(text, max_length=num_tokens, min_length=30, do_sample=False))"
    ]
   },
   {
