MEETING_SUMMARY model works well in testing

--- a/src/summary_testing.ipynb
+++ b/src/summary_testing.ipynb
@@ -311,9 +311,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d1ca13a22f8a4f129bb358908a41a532",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/1.59k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0e009989529a47608bc1300c9e86c2d6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/1.63G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "12a3d5a4810b4fcd87b9c434b476f28d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/337 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "533c3f581023440a966568befeffe432",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.json:   0%|          | 0.00/798k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6d71e1019e0b4fe5acad788d909bb069",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "merges.txt:   0%|          | 0.00/456k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "079f6a98d8a14f08bbb29706a6bf1090",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/1.36M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d0f3f7d7805045719ef0e59cf93d632f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/239 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -327,12 +425,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'summary_text': 'To-Do x Start Dev for Neurovolume in Docker file This dataset is pretty good looking: https://openneuro.org/datasets/ds003548/versions/1.0.1 Use VDB color and emission to show activations, not a layered VDB Ask in Zulip about running/funding OSS stuff . Status as of Lunch Dockerfile does work but needed setup within vscode .'}]\n"
+      "[{'summary_text': 'On to-do items: Start developing a project for neurovolume. Work on fMRI sequence from Open Neuro project which shows un-blurred brain anatomy. Ask in Zulip about running an open source project. Add nilearn to docker file and push it to openvdb_docker. Rebuild container with numpy support.'}]\n"
      ]
     }
    ],
    "source": [
-    "model_name = \"Falconsai/text_summarization\"\n",
+    "model_name = \"knkarthick/MEETING_SUMMARY\"\n",
     "summarizer = pipeline(\"summarization\", model=model_name)\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "\n",
@@ -341,10 +439,10 @@
     "    tokens = tokenizer(text)\n",
     "    num_tokens = len(tokens['input_ids'])\n",
     "\n",
-    "    max_tokens = 512\n",
+    "    # max_tokens = 512\n",
     "\n",
-    "    if num_tokens >= max_tokens:\n",
-    "        num_tokens = max_tokens\n",
+    "    # if num_tokens >= max_tokens:\n",
+    "    #     num_tokens = max_tokens\n",
     "\n",
     "    print(summarizer(text, max_length=num_tokens, min_length=30, do_sample=False))"
    ]
