appears to work

--- a/src/split_testing.ipynb
+++ b/src/split_testing.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/joachimpfefferkorn/repos/daily_note_organizer/.venv/lib/python3.11/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n",
+      "Hardware accelerator e.g. GPU is available in the environment, but no `device` argument is passed to the `Pipeline` object. Model will be on CPU.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from transformers import pipeline, AutoTokenizer\n",
@@ -59,8 +69,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/joachimpfefferkorn/repos/daily_note_organizer/.venv/lib/python3.11/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
-      "  warnings.warn(\n",
       "Hardware accelerator e.g. GPU is available in the environment, but no `device` argument is passed to the `Pipeline` object. Model will be on CPU.\n"
      ]
     }
@@ -131,7 +139,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class '__main__.Section'>\n",
       "🐘 Original section must be split by 2! Section tokens: 2718 Max model length: 1024\n",
       "🪸 New sections updated with split subsections, 🔃 recursively split is recursing\n",
       "⚔️ Splitting subsection 0\n",
@@ -158,7 +165,7 @@
       "⚔️ Splitting subsection 2\n",
       "🦋 Section is small enough!\n",
       "🏄 Small enough section added to new_sections\n",
-      "[<__main__.Section object at 0x132969a50>, <__main__.Section object at 0x131cedc10>, <__main__.Section object at 0x131cee110>, <__main__.Section object at 0x131cee090>, <__main__.Section object at 0x127e94dd0>, <__main__.Section object at 0x1317fbe10>]\n"
+      "[<__main__.Section object at 0x11fee5590>, <__main__.Section object at 0x11f2b2910>, <__main__.Section object at 0x11f2b2a90>, <__main__.Section object at 0x11f2b2c90>, <__main__.Section object at 0x11f2b2b10>, <__main__.Section object at 0x11f2b3210>]\n"
      ]
     }
    ],
@@ -170,7 +177,7 @@
     "            biggest_section = section\n",
     "    return biggest_section\n",
     "\n",
-    "output_sections = []\n",
+    "note_sections = []\n",
     "og_section = Section(prepared_note)\n",
     "def recursive_split(input_section, split_amount):\n",
     "\n",
@@ -185,24 +192,21 @@
     "    else:\n",
     "        print(f\"🦋 Section is small enough!\")\n",
     "        print(f\"🏄 Small enough section added to new_sections\")\n",
-    "        output_sections.append(input_section)\n",
+    "        note_sections.append(input_section)\n",
     "        return 0\n",
     "\n",
     "\n",
     "\n",
     "split_amount = 1\n",
-    "input_sections = split(Section(prepared_note), split_amount)\n",
-    "print(type(input_sections[0]))\n",
-    "# for section in sections:\n",
-    "#     print(section.content)\n",
+    "\n",
     "\n",
     "recursive_split(og_section, split_amount)\n",
-    "print(output_sections)\n"
+    "print(note_sections)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -219,16 +223,20 @@
     }
    ],
    "source": [
-    "summary = \"\"\n",
-    "for i, section in enumerate(output_sections):\n",
-    "    print(f\"📇 Summarizing section {i}\")\n",
-    "    summary += summarize_string(section.content, summarizer, tokenizer)[0]['summary_text'] + \"\\n\"\n",
-    "    #summary += summarize_string(section.content, summarizer, tokenizer)['summary_text'] + \"\\n\""
+    "def summarize_sections(note_sections):\n",
+    "    summary = \"\"\n",
+    "    for i, section in enumerate(note_sections):\n",
+    "        print(f\"📇 Summarizing section {i}\")\n",
+    "        summary += summarize_string(section.content, summarizer, tokenizer)[0]['summary_text'] + \"\\n\"\n",
+    "        #summary += summarize_string(section.content, summarizer, tokenizer)['summary_text'] + \"\\n\"\n",
+    "    return summary\n",
+    "\n",
+    "summary = summarize_sections(note_sections)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
